src/test/ui/suggestions/dont-suggest-private-trait-method.stderr
error[E0599]: no function or associated item named `new` found for type `T` in the current scope
  --> $DIR/dont-suggest-private-trait-method.rs:14:5
   |
11 | struct T;
   | --------- function or associated item `new` not found for this
...
14 |     T::new();
   |     ^^^^^^ function or associated item not found in `T`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0599"
